Java Script Variaeis e Funções

--- a/BeAcademy-FromZeroToHero-JavaScript/javascript-1.html
+++ b/BeAcademy-FromZeroToHero-JavaScript/javascript-1.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
-    <script src="./variaveis.js"></script>
+    <!-- <script src="./variaveis.js"></script> -->
+    <script src="/funcao.js"></script>
 </body>
 </html>
