--- a/BeAcademy-FromZeroToHero-JavaScript/javascript-1.html
+++ b/BeAcademy-FromZeroToHero-JavaScript/javascript-1.html
@@ -9,6 +9,7 @@
 <body>
 
     <!-- <script src="./variaveis.js"></script> -->
-    <script src="/funcao.js"></script>
+    <!-- <script src="/funcao.js"></script> -->
+    <script src="./dados.js"></script>
 </body>
 </html>
