Java Script Condições e estruturas de repetição

--- a/BeAcademy-FromZeroToHero-JavaScript/javascript-1.html
+++ b/BeAcademy-FromZeroToHero-JavaScript/javascript-1.html
@@ -10,6 +10,7 @@
 
     <!-- <script src="./variaveis.js"></script> -->
     <!-- <script src="/funcao.js"></script> -->
-    <script src="./dados.js"></script>
+    <!-- <script src="./dados.js"></script> -->
+    <script src="./repeticao.js"></script>
 </body>
 </html>
